base/tools/phpMyAdmin/templates/phpMyAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    domainName: phpmyadmin-gameon-test-mn.pblb2c.com
  labels:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    dns: route53
  name: phpmyadmin
  namespace: tools
spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
  sessionAffinity: None
  type: ClusterIP
